--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
                 <img src="./IMG_20241212_133624_055.jpg" alt="Camisa Louis Vuitton Degrade" class="imagensvender">
                 <p>Camisa Tamanho M (Bege e Preta)</p>
                 <span class="linha">R$49,99</span>
-                <a href="" class="botao">Comprar</a>
+                <a href="produto.html" class="botao">Comprar</a>
             </div>
             <div class="produto">
                 <h3>Camisa Burberry</h3>
                 <img src="./loja/IMG-20250110-WA0208.jpg" alt="Camisa Burberry" class="imagensvender">
                 <p>Camisa Tamanho P (Vermelha) </p>
                 <span class="linha">R$49,99</span>
-                <a href="" class="botao">Comprar</a>
+                <a href="produto.html" class="botao">Comprar</a>
             </div>
             <div class="produto">
                 <h3>Camisa Prada</h3>
                 <img src="loja/IMG-20241228-WA0096" alt="Camisa Prada" class="imagensvender">
                 <p>Camisa Tamanho G (Branco e Refletivo) </p>
                 <span class="linha">R$49,99</span>
-                <a href="" class="botao">Comprar</a>
+                <a href="produto.html" class="botao">Comprar</a>
             </div>
             <div class="produto">
                 <h3>Camisa Hugo Boss</h3>
                 <img src="loja/IMG-20241212-WA0092.jpg" alt="Camisa Hugo Boss" class="imagensvender">
                 <p>Camisa Tamanho M (Azul marinho) </p>
                 <span class="linha">R$49,99</span>
-                <a href="" class="botao">Comprar</a>
+                <a href="produto.html" class="botao">Comprar</a>
             </div>
             <div class="produto">
                 <h3>Camisa Gucci</h3>
